@@ -80,7 +80,34 @@ foundation-list@gnome.org or to us at elections@gnome.org.</P>
 <P><B>CANDIDATES FOR THE GNOME FOUNDATION BOARD OF DIRECTORS</B> 
 </P>
 
-There is no known candidate at the moment.
+<P>1. MARTIN SAVIOR<br />
+&quot;
+Now that the push for corporate desktop is on in earnest I believe I can
+help the GNOME community of volunteer hackers feel empowered by
+providing a genuinely independent voice on the Board. I can do this
+because I have no financial stake in any company. I contribute to
+AbiWord and GNOME for the love of hacking and the desire to be part of
+the project to make the World's best desktop.
+&quot;<br />
+Affiliation: University of Melbourne.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-October/msg00006.html">http://mail.gnome.org/archives/foundation-announce/2002-October/msg00006.html</a>
+</P>
+
+<P>2. RICHARD STALLMAN<br />
+&quot;
+I've been working for GNOME since years before there was a GNOME.  In
+1983, while formulating plans for the GNU operating system, I decided
+it should include a window system.  After two desktop initiatives that
+didn't pan out, I found Miguel, who launched our third desktop
+project--GNOME.
+<br />
+As president of the Free Software Foundation and Chief GNUisance of
+the GNU Project, I have had years of experience working with
+contributors both individual and corporate.
+&quot;<br />
+Affiliation: Free Software Foundation.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-October/msg00007.html">http://mail.gnome.org/archives/foundation-announce/2002-October/msg00007.html</a>
+</P>
 
 <center>
 <P>
