@@ -1,3 +1,7 @@
+2002-10-30  Vincent Untz  <vincent@vuntz.net>
+
+	* ballot-summary.html: first two candidates.
+
 2002-10-29  Glynn Foster  <glynn.foster@sun.com>
 
 	* elections.html: Remove reference to 2001, since it's the
